Item283: Catching up on the Danish again
git-svn-id: http://svn.foswiki.org/trunk@1521 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/da.po
+++ b/core/locale/da.po
@@ -1174,6 +1174,8 @@ msgid ""
 "Did you spell the topic name correctly? Remember, a topic name is case "
 "sensitive."
 msgstr ""
+"Stavede du dit navn rigtigt? Husk at et sidenavn er følsomt for "
+"store og små bodstaver."
 
 #: core/data/System/VarMAKETEXT.txt:19
 msgid "Did you want to [[%1][reset %2's password]]?"
@@ -3232,12 +3234,10 @@ msgstr ""
 "%2"
 
 #: core/templates/messages.tmpl:459
-#, fuzzy
 msgid ""
 "Warning: Can't INCLUDE '%1', path is empty or contains illegal characters."
 msgstr ""
-"Advarsel: Kan ikke INCLUDE siden %1 rekursivt, siden er allerede inkluderet. "
-"%2"
+"Advarsel: Kan ikke INCLUDE %1, navnet er tomt eller indeholder ugyldige tegn."
 
 #: core/templates/messages.tmpl:457
 msgid "Warning: Can't find topic %1.%2"
